<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_library"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/library"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_table_of_contents"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/table_of_contents"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_go_to_page"
        android:icon="@android:drawable/ic_menu_set_as"
        android:title="@string/go_to_page"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_view_bookmarks"
        android:icon="@android:drawable/btn_star"
        android:title="@string/view_bookmarks"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_view_highlights"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/view_highlights"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_tts_play"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/tts_play"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_tts_controls"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/tts_controls"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_toggle_night_mode"
        android:icon="@android:drawable/ic_menu_day"
        android:title="@string/toggle_night_mode"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_customize_reading"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/customize_reading"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_app_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/app_settings"
        app:showAsAction="never" />

</menu>
