<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sync"
        android:icon="@android:drawable/ic_popup_sync"
        android:title="@string/sync"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_collections"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/collections"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_download_network"
        android:icon="@android:drawable/stat_sys_download"
        android:title="@string/download_books"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>

